QQuickActionGroup: add missing default property

Task-number: QTBUG-63674
Change-Id: I7e8eef4080f123ba5ad6b9ffa8bd8613c1b7b724
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>